@@ -45,11 +45,11 @@ dependencies {
     testImplementation(platform("org.junit:junit-bom:5.11.4"))
     testImplementation("org.junit.jupiter:junit-jupiter")
     testImplementation(libs.paper.api)
-    testImplementation("org.openjdk.jol:jol-core:0.17")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
     testLogging.showStandardStreams = true
 }
